cambio de nombres

--- a/templates/store/category.html
+++ b/templates/store/category.html
@@ -1,6 +1,6 @@
 {% extends "../base.html" %}
 {% block title %}
-{% if category %}{{ category.name }}{% else %}Products{% endif %}
+{% if category %}{{ category.name }}{% else %}Producto{% endif %}
 {% endblock %}
 {% block content %}
 
