--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -79,7 +79,7 @@
                 <img   src="{% static 'slider/banner2.jpg' %}" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="{% static 'slider/banner.jpg' %}" class="d-block w-100" alt="...">
+                <img src="{% static 'slider/banner3.jpg' %}" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -94,6 +94,7 @@
 
 
 </div>
+
 
           {% endif %}
         
