--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,27 +1,27 @@
 {% extends "./sub_base.html" %}
-{% block title %}Log-in{% endblock %}
+{% block title %}Ingresar {% endblock %}
 {% block sub_content %}
 
 <form class="account-form" action="{% url 'account:login' %}" method="post">
   {% csrf_token %}
-  <h3 class="mb-4">Sign In</h3>
+  <h3 class="mb-4">Iniciar Sesion</h3>
   {% if form.errors %}
   <div class="alert alert-primary" role="alert">
-    Error: Username or Password not correct!
+    ERROR: Ingreso la clave o el usuario de forma incorrecta
   </div>
   {% endif %}
-  <label class="form-label">{{ form.username.label}}</label>
+  <label class="form-label">Email</label>
   {{ form.username}}
-  <label class="form-label">{{ form.password.label}}</label>
+  <label class="form-label">Contraseña</label>
   {{ form.password}}
   <div class="d-grid gap-2">
     <input type="hidden" name="next" value="{{ next }}">
-    <button class="btn btn-primary py-2 mb-4 mt-5 fw-bold" type="submit" value="Log-in">Sign in
+    <button class="btn btn-primary py-2 mb-4 mt-5 fw-bold" type="submit" value="Log-in">Iniciar Sesion
     </button>
   </div>
   <div class="flex-column justify-content-center mx-auto pb-3">
-    <div class="text-center"><a href="{% url "account:register" %}">Create an account</a></div>
-    <div class="text-center"><a href="{% url "account:pwdreset" %}">Forgotten Password?</a></div>
+    <div class="text-center"><a href="{% url "account:register" %}">Crear una cuenta</a></div>
+    <div class="text-center"><a href="{% url "account:pwdreset" %}">Olvido la clave?</a></div>
   </div>
 </form>
 
