--- a/templates/account/registration/register.html
+++ b/templates/account/registration/register.html
@@ -4,11 +4,11 @@
 
 <form class="account-form" action="." method="post">
   {% csrf_token %}
-  <h3 class="mb-2">Create an account</h3>
-  <p class="mb-4">It's free and only takes a minute.</p>
+  <h3 class="mb-2">Crear cuenta</h3>
+  <p class="mb-4">Recuerde que debe vivir dentro del condominio.</p>
 
   {% if form.errors %}
-  <p>Please correct the following errors:</p>
+  <p>Porfavor arreglar los siguientes errores:</p>
   {% for field in form %}
   {% if field.errors %}
   <div class="alert alert-primary" role="alert">
@@ -19,15 +19,15 @@
   {% endif %}
 
   <label>{{ form.user_name.label }}<span class="text-muted small">
-      (Required)</span></label>
+      (Obligatorio)</span></label>
   {{ form.user_name }}
   <label>{{ form.email.label}}<span class="text-muted small">
-      (Required)</span></label>
+      (Obligatorio)</span></label>
   {{ form.email }}
   <label>{{ form.password.label}}<span class="text-muted mb-4">
     </span></label>
   <small class="form-text text-muted mb-4 small">
-    At least 8 characters and 1 digit
+    Almenos 8 caracteres y un digito numerico
   </small>
   {{ form.password }}
   <label>{{ form.password2.label}}<span class="text-muted small">
@@ -35,7 +35,7 @@
   {{ form.password2 }}
   <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw500 w-100" type="submit">Register</button>
   <p class="text-center">
-    <a href="{% url "account:login" %}">Already have an account?</a>
+    <a href="{% url "account:login" %}">Ya posee una cuenta?</a>
   </p>
 </form>
 
