--- a/static/store/css/estilos.css
+++ b/static/store/css/estilos.css
@@ -1,15 +1,16 @@
-
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color:#EDF2F7;
+    background-color: #EDF2F7;
     font-family: 'Open Sans', sans-serif;
+    background: url(https://images.unsplash.com/photo-1483653364400-eedcfb9f1f88?ixlib=rb-0.3.5&q=85&fm=jpg) center / cover;
 }
 
-h1,h2 {
+h1,
+h2 {
     font-family: 'Balsamiq Sans', cursive;
 }
 
@@ -17,18 +18,18 @@ label.error {
     color: darkred;
 }
 
-
 header {
     width: 100%;
     height: 80px;
     background-color: #2B6CB0;
     /*margin-left: 30px;
-    padding-left: 30px;*//*right-top-bottom*/
+    padding-left: 30px;*/
+    /*right-top-bottom*/
     display: flex;
     justify-content: space-between;
 }
 
-header > div {
+header>div {
     width: 50%;
 }
 
@@ -44,22 +45,24 @@ header > div {
 
 nav {
     display: flex;
-    justify-content: flex-end;/*flex-start - center - flex-end*/ /*horizontal*/
+    justify-content: flex-end;
+    /*flex-start - center - flex-end*/
+    /*horizontal*/
     align-items: center;
     height: 100%;
 }
 
-nav > ul {
+nav>ul {
     margin-right: 50px;
 }
 
-nav > ul > li {
+nav>ul>li {
     display: inline;
     margin-left: 10px;
 }
 
 nav a {
-    color:white;
+    color: white;
     text-decoration: none;
 }
 
@@ -80,7 +83,7 @@ nav a {
 
 #contenido {
     width: 80%;
-    margin:auto;
+    margin: auto;
     max-width: 1280px;
     min-height: 100vh;
 }
@@ -111,6 +114,7 @@ nav a {
     margin: auto;
 }
 
+
 /*FOOTER*/
 
 footer {
@@ -119,7 +123,7 @@ footer {
     background-color: #2D3748;
 }
 
-footer > .marcas {
+footer>.marcas {
     width: 100%;
     height: 80px;
     background-color: #4A5568;
@@ -128,18 +132,19 @@ footer > .marcas {
     align-items: center;
 }
 
-footer > .marcas > img {
+footer>.marcas>img {
     width: 50px;
 }
 
-footer > .logo_footer {
+footer>.logo_footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100% - 80px);/*100% - 80px*/
+    height: calc(100% - 80px);
+    /*100% - 80px*/
 }
 
-footer > .logo_footer > img {
+footer>.logo_footer>img {
     width: 100px;
 }
 
@@ -148,18 +153,19 @@ footer > .logo_footer > img {
     position: absolute;
     left: 10px;
     top: 10px;
-    display:none;
+    display: none;
 }
+
 
 /*FIN FOOTER*/
 
-
-input[type=text], input[type=email],
-input[type=number], select, textarea {
-
+input[type=text],
+input[type=email],
+input[type=number],
+select,
+textarea {
     width: 100%;
     padding: 5px;
-
 }
 
 textarea {
@@ -167,7 +173,7 @@ textarea {
 }
 
 .button {
-    padding:5px 10px;
+    padding: 5px 10px;
     color: white;
     background-color: #2B6CB0;
     border: none;
@@ -176,7 +182,7 @@ textarea {
 
 .formulario_contacto {
     width: 500px;
-    margin-top:50px;
+    margin-top: 50px;
 }
 
 
@@ -184,6 +190,7 @@ textarea {
 
 
 /*Tablets*/
+
 @media (max-width: 1024px) {
     .galeria {
         grid-template-columns: 1fr 1fr;
@@ -191,77 +198,64 @@ textarea {
     .producto {
         width: 50%;
     }
-
     .formulario_contacto {
         width: 100%;
     }
 }
 
-/*Smartphone*/
-@media (max-width: 480px) {
 
+/*Smartphone*/
+
+@media (max-width: 480px) {
     .galeria {
         grid-template-columns: 1fr;
     }
-
     .menu {
-        display:block;
+        display: block;
     }
-
     @keyframes animacion_producto_mobile {
         0% {
-            transform: scale(0.1); /*0-1*/
+            transform: scale(0.1);
+            /*0-1*/
             /*opacity: 0 - 1*/
         }
-
         80% {
             transform: scale(1.1);
         }
-
         100% {
             transform: scale(1);
         }
     }
-
     .producto {
         width: 100%;
         animation: animacion_producto_mobile 0.8s;
     }
-
     header {
         flex-direction: column;
         height: 60px;
         overflow: hidden;
         transition: all 0.6s;
-       
-        
     }
     #contenido {
         margin-top: 60px;
     }
-
-    header > div {
+    header>div {
         width: 100%;
     }
-
     .contenedor_logo {
         justify-content: center;
-        margin-top:10px;
+        margin-top: 10px;
     }
-
     nav {
         justify-content: center;
     }
-
-    nav > ul {
-        margin:0;
+    nav>ul {
+        margin: 0;
     }
-
-    nav > ul > li {
+    nav>ul>li {
         display: block;
-        margin:0;
+        margin: 0;
         text-align: center;
-        padding:20px 0;
+        padding: 20px 0;
     }
-
 }
